# ServeSmith

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYING.md  scheduling.md
k8s/: rbac.yaml  storage.yaml
src/servesmith/: __init__.py  auth.py  logging_config.py  metrics.py  notifications.py  orchestrator.py  server.py  store.py  templates.py
src/servesmith/backends/: __init__.py  neuron_backend.py  registry.py  tensorrt_backend.py  vllm_backend.py
src/servesmith/benchmarker/: __init__.py  gpu_metrics.py  load_generator.py  metrics.py  runner.py  vllm_server.py
src/servesmith/executor/: __init__.py  gpu_scaler.py  k8s.py  output_handler.py  s3_helpers.py
src/servesmith/models/: __init__.py  experiment.py  formats.py  job.py  resource.py
src/servesmith/planner/: __init__.py  planner.py
src/servesmith/recommender/: __init__.py  pricing.py  recommender.py
tests/: test_backends.py  test_k8s_executor.py  test_metrics.py  test_planner.py  test_resource.py
ui/: index.html  landing.html
